                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-10-2006 fixed: http urls pointing to nonexisting files would lockup on some servers due to them not returning an error
 - 06-10-2006 fixed: ftp browsing with files/directory with non valid html url names, would fail.
 - 05-10-2006 fixed: Changed RSS speed to a multiple of 0.5 pixels/frame for improved smoothness.
 - 05-10-2006 fixed: [ 1571200 ] Arial.ttf subtitles not using subtitle position.
 - 05-10-2006 fixed: Potential RSS control crash when removing the control while it's updating.
 - 04-10-2006 changed: Z: is erased on boot, due to many issues if it was full.
 - 04-10-2006 fixed: Seekbar, Volume bar etc. would be unloaded when exiting from fullscreen video, causing them to vanish.
 - 04-10-2006 fixed: Reloading skin while in My Music Songs would cause the progress dialog to show endlessly.
 - 04-10-2006 fixed: memory stick shares were chooseable in the Add Source browser, even though they're plug n play.
 - 04-10-2006 fixed: special:// protocols (eg musicplaylists, cdrip etc.) always showed network overlays, even if they were local.
 - 03-10-2006 fixed: Huge playlists would cause major GUI slowdowns whenever track was changed from the Now Playing window.
 - 03-10-2006 fixed: Toggle button showed the incorrect label when using <usealttexture>
 - 03-10-2006 fixed: the feh and the userdata wiping didn't quite work as expected (i.e. it didnt work at all).
 - 03-10-2006 fixed: if you canceled the 'scan all / scan new' dialog in the music window, it would still scan.
 - 03-10-2006 fixed: ftp playback in mplayer where broken due to yet another url parsing mistake